Upcoming:
- Safer client-side registrations (thread-safety)

4.0.1-beta:
- Fixed a potential exploit which could be used to attack a server

4.0.0-beta:
- First port to 1.16.2

3.0.5:
- Fixed a potential exploit which could be used to attack a server

3.0.4-beta:
- Update for latest McJtyLib

3.0.3-beta:
- Update for latest McJtyLib

3.0.2-beta:
- Fixed a problem with fetching variables and fluids from a processor through a tablet

3.0.1-beta:
- Dependency fix

3.0.0-beta:
- First port of RFTools Control to 1.15
- Removed all oredictionary related parameters
- New 'test_tag' opcode to test if an item contains a tag
- New 'eval_gettags' opcode to get all tags for an item
- The filter module can now also be inserted in the processor (in the expansion slots)
- New 'test_filter' opcode to test if an item matches a filter
- New 'do_fetchitems_filter' opcode to fetch items from an inventory that match the given filter
- Fixed the recipes for the vanilla recipe book
- Moved most of the configs from common to server (so that they are saved with the world and synced to the client)

2.0.2:
- Fixed a bug where the storage card module wouldn't always get recognized by the processor
- Added a new 'eval_getcraftingcard'. This can get the crafting card out of an inventory that can craft the given item
- Added ore dictionary support for 'do_pushworkbench'
- Added ore dictionary support for 'eval_ingredients'
- The 'net list' command will now also show crafting stations

2.0.1:
- Fixed a bug where oredictionary matching was broken for 'get_ingredients_smart'
- Fixed a problem with the item tooltip in the crafting station
- The 'eval_item' opcode will no longer give an error if it returns an empty item. An empty item is valid too

2.0.0:
- Depends on McJtyLib 3.5.0!
- Fixed dropping liquid buckets in the fluid opcodes
- Small improvement on error logging. The index of the program card that is causing the error is now also printed