@@ -1,5 +1,6 @@
 Upcoming:
 - Safer client-side registrations (thread-safety)
+- Various cleanups and fixes
 
 4.0.1-beta:
 - Fixed a potential exploit which could be used to attack a server
